# response/debug_response.go
@@ -3,3 +3,8 @@ package response
 type DebugEchoResponse struct {
 	Message string `json:"message"`
 }
+
+type DebugTokenResponse struct {
+	IDToken string `json:"id_token" example:"eyJhbGciOiJSUzI1NiIs..."`
+	UID     string `json:"uid" example:"hTFudCor2wT3Bab570LvOm2X6z73"`
+}
