# router/debug_router.go
@@ -2,13 +2,13 @@ package router
 
 import (
 	"github.com/labstack/echo/v4"
+	"github.com/trihackathon/api/adapter"
 	"github.com/trihackathon/api/controller"
-	"go.uber.org/dig"
 )
 
-func DebugRouter(e *echo.Echo, container *dig.Container) {
-	controller := controller.NewDebugController(container)
-	e.GET("/debug/health", controller.Health)
-	e.GET("/debug/endpoints", controller.Endpoints)
-	e.POST("/debug/echo", controller.Echo)
+func DebugRouter(e *echo.Echo, fa *adapter.FirebaseAdapter) {
+	ctrl := controller.NewDebugController(fa)
+	e.GET("/debug/health", ctrl.Health)
+	e.GET("/debug/endpoints", ctrl.Endpoints)
+	e.POST("/debug/echo", ctrl.Echo)
 }
